--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1030,3 +1030,57 @@ section.loader-wrapr {
     left: 90%;
   }
 }
+//share pop up
+.share-popup.modal {
+  &.in {
+    background: rgba(0, 0, 0, 0.2);
+  }
+  .modal-dialog {
+    margin: 34vh auto;
+    margin-left: 44vw;
+  }
+  .modal-content,
+  .modal-body {
+    // width: 100%;
+    float: left;
+    background-color: transparent;
+    padding: 0;
+  }
+  .modal-body {
+    .share-wrapr {
+      background-color: transparent;
+      .social-media-link {
+        background-color: white;
+        margin-bottom: 2px;
+        padding: 10px 60px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+        .social-icon {
+          display: inline-block;
+          height: 20px;
+          width: 20px;
+          background-size: contain !important;
+          position: relative;
+          top: 5px;
+          margin-right: 10px;
+          &.icon-whatsapp {
+            background: url("../images/facebook.png") no-repeat center;
+          }
+          &.icon-facebook {
+            background: url("../images/facebook.png") no-repeat center;
+          }
+          &.icon-twitter {
+            background: url("../images/twitter.png") no-repeat center;
+          }
+          &.icon-email {
+            background: url("../images/facebook.png") no-repeat center;
+          }
+          &.icon-copylink {
+            background: url("../images/facebook.png") no-repeat center;
+          }
+        }
+      }
+    }
+  }
+}
