adde background image for youtube video

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1084,3 +1084,6 @@ section.loader-wrapr {
     }
   }
 }
+.placeholder_back {
+  background: url("../images/placeholder_pic.png") no-repeat center;
+}
