worked on cookie changes

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1086,4 +1086,5 @@ section.loader-wrapr {
 }
 .placeholder_back {
   background: url("../images/placeholder_pic.png") no-repeat center;
+  background-color: #000000;
 }
