--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -176,17 +176,22 @@
   .cookies-section {
     float: left;
     background: #ffffff;
-    padding: 25px;
+    padding: 18px;
     text-align: center;
     width: 100%;
-    border-top: 1px solid $charcoal_color;
-    border-bottom: 1px solid $charcoal_color;
     margin-top: 15px;
     a {
       color: $blue_color;
     }
     img {
       width: 12px;
+    }
+    button.cookie_btn {
+      background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+      color: #ffffff;
+      border: 0;
+      height: 40px;
+      padding: 10px 18px;
     }
   }
   footer {
