worked on cookie section and login pages

--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -19,6 +19,9 @@
     margin: auto;
     position: relative;
   }
+  section.ht860 {
+    height: 860px;
+  }
   .login-logo {
     text-align: center;
     padding: 13px;
