--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -170,7 +170,7 @@
   }
 }
 .middle-section.width-80 {
-  width: 80%;
+  width: 100%;
   @media (max-width: 767px) {
     width: 100%;
   }
@@ -318,7 +318,19 @@
   .radio-btn input:checked ~ .checkmark {
     @include gradient();
   }
+  & ~ div {
+    width: 80%;
+    float: left;
+    & ~ div {
+      width: 100%;
+      float: left;
+    }
+    @media (max-width: 767px) {
+      width: 100%;
+    }
+  }
 }
+
 .right_bar {
   width: 30%;
   float: right;
