--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -19,9 +19,6 @@
     margin: auto;
     position: relative;
   }
-  section.ht860 {
-    height: 860px;
-  }
   .login-logo {
     text-align: center;
     padding: 13px;
@@ -179,22 +176,17 @@
   .cookies-section {
     float: left;
     background: #ffffff;
-    padding: 18px;
+    padding: 25px;
     text-align: center;
     width: 100%;
+    border-top: 1px solid $charcoal_color;
+    border-bottom: 1px solid $charcoal_color;
     margin-top: 15px;
     a {
       color: $blue_color;
     }
     img {
       width: 12px;
-    }
-    button.cookie_btn {
-      background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
-      color: #ffffff;
-      border: 0;
-      height: 40px;
-      padding: 10px 18px;
     }
   }
   footer {
@@ -220,19 +212,5 @@
         }
       }
     }
-  }
-}
-.cookie-wrapr {
-  position: fixed;
-  bottom: 68px;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-  .custom-container {
-    width: 100%;
-  }
-  .readmore {
-    margin: 0 10px;
-    text-decoration: underline;
   }
 }
