--- a/html-design/html/css/pages/_home.scss
+++ b/html-design/html/css/pages/_home.scss
@@ -295,6 +295,9 @@
 		padding: 10px;
 		@include float();
 		.profile_image{
+			&.wid45{
+			  width: 55px;
+			}
 			img{
 				width: 45px;    			
 			}
