--- a/html-design/html/css/pages/_information.scss
+++ b/html-design/html/css/pages/_information.scss
@@ -23,7 +23,9 @@
 	}
 	img{
 		width: 100%;
-		// margin-bottom: 15px;
+		.padd20{
+			padding: 0 20px;
+		}
 	}
 	button{ 
 		width: 100%;
@@ -50,7 +52,10 @@
 			}
 			.profile_image{
 				display: inline-block;
-    			float: left;
+				float: left;
+				&.wid45{
+				  width: 55px;
+				}
 			}
 			.comment-content{
 				p{
