--- a/src/styles/global/pages-backup/_home.scss
+++ b/src/styles/global/pages-backup/_home.scss
@@ -337,6 +337,9 @@
       display: inline-block;
       float: left;
       margin-right: 16px;
+      &.wid45{
+        width: 55px;
+      }
       img {
         width: 45px;
         height: 45px;
