--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -273,6 +273,9 @@
       }
       .profile_image {
         float: left;
+        &.wid45{
+          width: 55px;
+        }
         img {
           width: 45px;
           margin-right: 10px;
