--- a/src/styles/global/pages/_information.scss
+++ b/src/styles/global/pages/_information.scss
@@ -24,6 +24,7 @@
   margin-bottom: 30px;
   .info-inner-wrapper {
     padding: 25px 30px 0px 30px;
+    background-color: #ffffff;
   }
   @include float();
   height: calc(100vh - 100px);
@@ -82,7 +83,9 @@
   }
   img {
     width: 100%;
-    // margin-bottom: 15px;
+    &.padd20{
+			padding: 0 20px;
+		}
   }
   button {
     width: 100%;
@@ -113,6 +116,9 @@
       .profile_image {
         display: inline-block;
         float: left;
+        &.wid45{
+          width: 55px;
+        }
       }
       .comment-content {
         p {
