--- a/src/styles/global/pages/_upload-img.scss
+++ b/src/styles/global/pages/_upload-img.scss
@@ -49,6 +49,9 @@
       padding: 20px;
       .profile_image {
         float: left;
+        &.wid45{
+          width: 55px;
+        }
         img {
           width: 45px;
           margin-right: 10px;
