--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -617,6 +617,7 @@
       float: left;
       width: 100%;
       padding: 10px;
+      min-height: 80px;
       &:first-child {
         border-top: 1px solid rgba(0, 0, 0, 0.8);
       }
