--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -77,6 +77,9 @@
             &:first-child {
               color: $charcoal_color;
             }
+            &:last-child{
+              border-bottom: 0px;
+            }
             &.new {
               .username {
                 &:after {
