--- a/src/styles/global/pages/_pics.scss
+++ b/src/styles/global/pages/_pics.scss
@@ -5,6 +5,11 @@
 .pic-right-block {
   padding-right: 0px;
   padding-left: 5px;
+  .pic-block {
+      img {
+        min-height: 276px;
+      }
+    }
 }
 .pic-block {
   &.gray_content {
@@ -14,12 +19,16 @@
   }
   img {
     width: 100%;
+    background-color: #cbcbcb;
   }
   .name-wrapper {
     text-align: center;
     padding: 10px;
     background: #fff;
     margin-bottom: 10px;
+    .name{
+      min-height: 20px;
+    }
     .username {
       font-family: "Helvetica-Bold";
     }
