--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -182,6 +182,10 @@
     border-top: 1px solid $charcoal_color;
     border-bottom: 1px solid $charcoal_color;
     margin-top: 15px;
+    position: fixed;
+    bottom: 65px;
+    left: 0;
+    width: 100%;
     a {
       color: $blue_color;
     }
@@ -199,7 +203,10 @@
     background-color: white;
     z-index: 100 !important;
     margin: 0px;
-
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     ul {
       padding: 0px;
       text-align: center;
