worked on register and login page css changes

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1150,5 +1150,13 @@ section.loader-wrapr {
     }
   }
 
+  .got_it{
+    background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+    color: white;
+    border: 0;
+    padding: 10px 39px;
+    height: 40px;
+    margin-left: 20px;
+  }
   //circle animation
   
