--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -72,6 +72,15 @@ body {
 .padding-right-10 {
   padding-right: 10px;
 }
+.padding-right-5{
+  padding-right: 5px;
+}
+.padding-right-15{
+  padding-right: 15px;
+}
+.padding-left-5{
+  padding-left: 5px;
+}
 .padding-b-25 {
   padding-bottom: 25px;
 }
