--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -363,17 +363,30 @@
         width: 100%;
       }
       .community-user-image {
-        width: 32%;
+        width: 24%;
         padding: 0px 15px;
         @media (max-width: 1199px) {
           float: left;
         }
+        @media (max-width: 991px) {
+          width: 45px;
+          height: 45px;
+          padding: 0;
+        }
+        img{
+          max-width: 45px;
+          max-height: 45px;
+        }
       }
       .community-user-name {
-        width: 33%;
+        width: 38%;
         align-self: center;
         @media (max-width: 1199px) {
           float: left;
+        }
+        @media (max-width: 991px) {
+          width: calc(100% - 50px);
+          padding-left: 15px;
         }
       }
       .community-subscribe {
@@ -382,6 +395,16 @@
           height: 35px;
           padding: 6px;
           width: 90px;
+          @media(max-width: 1199px){
+						width: 85px;
+						padding: 3px;
+						font-size: 13px;
+          }
+          @media (max-width: 991px){
+            width: calc(100% - 20px);
+            padding: 9px;
+            margin: 12px 10px 0px 10px;
+          }
         }
       }
     }
@@ -450,7 +473,7 @@
       }
     }
     .grey_title {
-      padding-left: 15px;
+      // padding-left: 15px;
       &.gray_box {
       }
     }
