worked on home page

--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -503,6 +503,7 @@
     }
     .like_wrapper {
       float: right;
+      padding-right: 0px;
       img {
         width: 30px;
         cursor: pointer;
