worked on left menu css

--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -182,6 +182,7 @@
   float: left;
   .navbar-nav {
     border-bottom: 2px solid rgba(198, 198, 198, 0.3);
+    width: 100%;
     li {
       width: 100%;
       a {
