message menu on focus

--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -94,6 +94,9 @@
                 }
               }
             }
+            &:focus{
+              outline: 0;
+            }
           }
           .menu-item.active {
             color: black;
