--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -226,6 +226,7 @@
       border-bottom: 2px solid rgba(198, 198, 198, 0.3);
       .filter-title {
         margin-bottom: 27px;
+        margin-bottom: 10px;
       }
       .autocomplete-dropdown-container {
         position: relative;
@@ -248,6 +249,7 @@
         color: $silver_color;
         &.lbl-margin {
           margin-bottom: 30px;
+          margin-bottom: 5px;
         }
         .checkmark {
           position: absolute;
@@ -289,6 +291,7 @@
         margin-bottom: 25px;
         padding: 10px;
         width: 100%;
+        margin: 0;
         &:focus {
           outline: none;
           border: 1px solid $charcoal_color;
