--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -187,6 +187,11 @@
             }
           }
         }
+        .nomessage{
+          text-align: center;
+          font-size: 18px;
+          padding: 30px 0;
+        }
       }
       .messages-right {
         width: 57%;
@@ -222,7 +227,7 @@
         .active-chat {
           float: left;
           border-left: 2px solid #333;
-          height: 406px;
+          height: 422px;
           width: 100%;
           overflow-y: auto;
           .date {
@@ -266,6 +271,10 @@
               top: 14px;
               left: 6px;
             }
+          }
+          &.nochat{
+            text-align: center;
+            font-size: 18px;
           }
         }
         .write-chat {
