worked on logout bold

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -161,6 +161,9 @@ hr {
     background: #d3d3d3;
     display: inline-block;
   }
+  .textBold{
+    font-weight: bold;
+  }
 }
 .grey_title {
   font-family: "Helvetica-Light";
