--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -481,6 +481,9 @@
         min-height: 15px;
         background-color: #d3d3d3;
       }
+      &.textBold{
+        font-weight: bold;
+      }
     }
     .grey_title {
       // padding-left: 15px;
