worked on header fixed smooth animation

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -138,6 +138,9 @@ hr {
 .textCenter {
   text-align: center;
 }
+.no-btn{
+  border: none;
+}
 /******** Titles Style*******************/
 .float_left{
   float: left;
