--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -1,8 +1,17 @@
 header {
-  transition: all ease-in .5s;
+  transition: all ease-in 1s;
+  transform: translateZ(0);
+  transition: all .5s;
+  z-index: 1000 !important;
   &.fixed {
     position: fixed;
-    z-index: 1000 !important;
+    animation: slide-down;
+    animation-direction: normal;
+    animation-duration: 0.7s;
+    top: 0px;
+  }
+  &.notfixed{
+    position: static;
   }
   margin-bottom: 10px;
   @include gradient();
@@ -316,4 +325,14 @@ header {
       }
     }
   }
+}
+@keyframes slide-down {
+  0% {
+      opacity: 0;
+      transform: translateY(-100%);
+  } 
+  100% {
+      opacity: 0.9;
+      transform: translateY(0);
+  } 
 }
