--- a/public/global/picstagraph-web/styles/custom.css
+++ b/public/global/picstagraph-web/styles/custom.css
@@ -2,3 +2,7 @@
     overflow-x: hidden !important;
     overflow-y: hidden !important;
 }
+.full-width-height {
+    width: 100%;
+    height: 100%;
+}
