--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -624,6 +624,7 @@
     .show_more_options {
       display: inline-block;
       float: right;
+      padding-right: 15px;
       div {
         color: $charcoal_color;
         display: inline-block;
