removed video background

--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -541,7 +541,7 @@
     float: left;
     width: 100%;
     video{
-      background: url("../images/play_video_back.png") no-repeat 50% #000;
+      // background: url("../images/play_video_back.png") no-repeat 50% #000;
       background-size: contain;
       background-position: center;
     }
