--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -144,6 +144,7 @@ hr {
 }
 .no-btn{
   border: none;
+  background: none;
 }
 /******** Titles Style*******************/
 .float_left{
@@ -855,6 +856,35 @@ section.loader-wrapr {
       text-align: center;
       margin-bottom: 2px;
       font-size: 12px;
+      position: relative;
+      z-index: 1;
+      &:before{
+        content: "";
+        position: absolute;
+        z-index: -1;
+        left: 51%;
+        right: 51%;
+        bottom: 0;
+        background: #ffffff;
+        height: 38px;
+        -webkit-transition-property: left, right;
+        transition-property: left, right;
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-timing-function: ease-out;
+        transition-timing-function: ease-out;
+        bottom: 1px;
+        z-index: -1;
+      }
+      &:hover{
+        color: white;
+        &::before{
+          background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+          bottom: -1px;
+          left: 0;
+          right: 0;
+        }
+      }
       &:last-child {
         margin-bottom: 0;
       }
