--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -117,7 +117,7 @@
           .chat-wrapper {
             float: left;
             width: 100%;
-            border-bottom: 2px solid #333;
+            border-bottom: 1px solid #bbb;
             color: $silver_color;
             &:first-child {
               color: $charcoal_color;
@@ -175,7 +175,8 @@
             text-align: center;
           }
           .chat-wrapper:hover, .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
+            border: 0px;
+            box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.3);
             color: #fff;
           }
         }
