--- a/src/styles/global/pages/_privacy.scss
+++ b/src/styles/global/pages/_privacy.scss
@@ -11,6 +11,10 @@
     }
   }
 }
+.react-switch {
+  vertical-align: middle;
+  margin-left: 4px;
+}
 .privacy-form {
   padding: 35px 100px 25px 100px;
   background: $white_color;
