implementation of the Create New Campaign API

--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -217,7 +217,7 @@
       input[name="street"] {
         width: 80%;
       }
-      input[name="number"] {
+      input[name="streetNumber"] {
         width: 15%;
         float: right;
       }
