add images loader

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -1373,5 +1373,7 @@ section.loader-wrapr {
     margin: 1.9em 0.45em !important;
   }
 }
-
+.bg-black {
+  background: #000;
+}
 // .video-js .vjs-big-play-button .vjs-icon-placeholder:before, .video-js .vjs-play-control .vjs-icon-placeholder:before,
